--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             18 лет и вы ознакомились с условиями пользования сайтом.
                             </label>
                     <button type="submit" name="form_btn" class="form__btn button">
-                        <a href="#hello" class="registration-screen__link link">продолжить</a>
+                        <a href="" class="registration-screen__link link">продолжить</a>
                     </button>
 
 
@@ -162,9 +162,11 @@
             </footer>
         </div>
     </section>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="./js/lodash.js"></script>
     <script src="./js/registration.js" type="module"></script>
     <script src="./js/percent.js"></script>
+    <script src="./js/scroll.js"></script>
 
 </body>
 
