--- a/index.html
+++ b/index.html
@@ -162,11 +162,12 @@
             </footer>
         </div>
     </section>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="./js/lodash.js"></script>
+    <script src="./js/lodash.js" type="module"></script>
     <script src="./js/registration.js" type="module"></script>
-    <script src="./js/percent.js"></script>
-    <script src="./js/scroll.js"></script>
+    <script src="./js/percent.js" type="module"></script>
+    <script src="./js/scroll.js" type="module"></script>
 
 </body>
 
