--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <section class="registration-screen wrapper" id="registration">
         <aside class="registration-screen__register">
             <div class="registration-screen__register-container">
+
                 <form class="registration-screen__reg-form" action="">
+
                     <h2 class="registration-screen__h2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod </h2>
 
                     <div class="registration-screen__question-container">
@@ -129,7 +131,7 @@
                     <label for="valueB" class="question-screen-1__question question-screen-1__question--woman">Вариант B</label>
                 </form>
 
-                <a href="" class="question-screen-1__btn link">продолжить</a>
+                <a href="#registration" class="question-screen-1__btn link">продолжить</a>
             </div>
         </aside>
 
