--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <label for="valueB" class="question-screen-1__question question-screen-1__question--woman">Вариант B</label>
                 </form>
 
-                <a href="#registration" class="question-screen-1__btn link">продолжить</a>
+                <a href="" class="question-screen-1__btn link">продолжить</a>
             </div>
         </aside>
 
